Update for pallet 0.8 and settings